--- a/.insomnia/Environment/env_ef8bb024ea4c347b83bd4f75e7447e9371a55a3a.yml
+++ b/.insomnia/Environment/env_ef8bb024ea4c347b83bd4f75e7447e9371a55a3a.yml
@@ -4,7 +4,8 @@ parentId: wrk_54c4f7e14f424a1b8d511da3fc1a35f4
 modified: 1645800842733
 created: 1645800842733
 name: Base Environment
-data: {}
+data:
+  base_url: "{{ scheme }}://{{ host }}{{ base_path }}"
 dataPropertyOrder: null
 color: null
 isPrivate: false
