updated host and scheme

--- a/.insomnia/Environment/env_env_ef8bb024ea4c347b83bd4f75e7447e9371a55a3a_sub.yml
+++ b/.insomnia/Environment/env_env_ef8bb024ea4c347b83bd4f75e7447e9371a55a3a_sub.yml
@@ -5,9 +5,9 @@ modified: 1645803611426
 created: 1645803351392
 name: local-dev
 data:
-  scheme: https
+  scheme: http
   base_path: ""
-  host: localhost:7001
+  host: 127.0.0.1:7000
 dataPropertyOrder:
   "&":
     - scheme
