--- a/.insomnia/Request/req_wrk_54c4f7e14f424a1b8d511da3fc1a35f4e8dadecc.yml
+++ b/.insomnia/Request/req_wrk_54c4f7e14f424a1b8d511da3fc1a35f4e8dadecc.yml
@@ -1,7 +1,7 @@
 _id: req_wrk_54c4f7e14f424a1b8d511da3fc1a35f4e8dadecc
 type: Request
 parentId: wrk_54c4f7e14f424a1b8d511da3fc1a35f4
-modified: 1645803351384
+modified: 1645823067139
 created: 1645803351384
 url: "{{ base_url }}/easie-chat/listen"
 name: /easie-chat/listen
@@ -10,8 +10,10 @@ method: GET
 body: {}
 parameters:
   - name: chat_rev
-    disabled: true
-    value: string
+    disabled: false
+    value: "{% response 'body', 'req_wrk_54c4f7e14f424a1b8d511da3fc1a35f403f77179',
+      'b64::JC5pZA==::46b', 'never', 60 %}"
+    id: pair_921a78402f3e46c49953b32c4255b2b7
 headers: []
 authentication: {}
 metaSortKey: -1645803351384
