--- a/.insomnia/Request/req_wrk_54c4f7e14f424a1b8d511da3fc1a35f4412a8689.yml
+++ b/.insomnia/Request/req_wrk_54c4f7e14f424a1b8d511da3fc1a35f4412a8689.yml
@@ -1,7 +1,7 @@
 _id: req_wrk_54c4f7e14f424a1b8d511da3fc1a35f4412a8689
 type: Request
-parentId: fld_87b4c23c5d29470ebb1df138ffdf2ebd
-modified: 1646140835621
+parentId: fld_fcaa974d183c4a8686d1f91934286a6e
+modified: 1646142482839
 created: 1645803351386
 url: "{{ base_url }}/easie-chat/send"
 name: /easie-chat/send (hello)
@@ -17,7 +17,8 @@ body:
 parameters:
   - name: chat_rev
     disabled: false
-    value: cce44321-7942-44bc-9de4-0a57ad7d2ede
+    value: "{% response 'body', 'req_wrk_54c4f7e14f424a1b8d511da3fc1a35f403f77179',
+      'b64::JC5pZA==::46b', 'always', 60 %}"
     id: pair_108003a729e942dbae789f4a5cdba260
   - name: chat_diag
     disabled: true
