--- a/.insomnia/UnitTest/ut_140a1007e9ef49f090020dab15faf722.yml
+++ b/.insomnia/UnitTest/ut_140a1007e9ef49f090020dab15faf722.yml
@@ -1,10 +1,10 @@
-_id: ut_b7d15bc7e7da49af8a2ad7048d82fa98
+_id: ut_140a1007e9ef49f090020dab15faf722
 type: UnitTest
-parentId: uts_120f0d5498e7439f93ec408a3d14bf0a
-modified: 1645830151308
-created: 1645830138993
+parentId: uts_537eea9f2b5a42a3ab357954fe8555d4
+modified: 1646142810488
+created: 1646142807100
 requestId: req_wrk_54c4f7e14f424a1b8d511da3fc1a35f4e8dadecc
-name: t2
+name: Get history returns 200
 code: |-
   const response1 = await insomnia.send();
   expect(response1.status).to.equal(200);
