--- a/.insomnia/UnitTest/ut_4e96139dfb0b4b7caca9a3df63c0fbb1.yml
+++ b/.insomnia/UnitTest/ut_4e96139dfb0b4b7caca9a3df63c0fbb1.yml
@@ -1,10 +1,10 @@
 _id: ut_4e96139dfb0b4b7caca9a3df63c0fbb1
 type: UnitTest
 parentId: uts_7553639092e449f48bdc77f851f0eca6
-modified: 1646141150550
+modified: 1646142021889
 created: 1646140879955
 requestId: req_a9c86fcfa0c74c8c824e3bf061e508c4
-name: Send chat with fixed chat id returns 200
+name: Send command returns 200
 code: |-
   const response1 = await insomnia.send();
   expect(response1.status).to.equal(200);
